data/derived/fa15/progs/unify/prog0264.ml.out
Characters 31-47:
  let stringOfList f l = List.map(f, sepConcat l);;
                                 ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
